# Blackwings

./: .editorconfig  .gitignore  Blackwings.sln  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yaml  publish-nightly.yaml  publish.yaml
Blackwings/: BHRecvOps.h  BHSendOps.h  BWRecvOps.h  BWSendOps.h  Blackwings.ini  Blackwings.vcxproj  Blackwings.vcxproj.filters  CInPacket.cpp  CInPacket.h  CInputSystem.cpp  CInputSystem.h  COutPacket.cpp  COutPacket.h  CWvsContext.cpp  CWvsContext.h  IWzArchive.h  IWzCanvas.h  IWzConvex2D.h  IWzFileSystem.h  IWzFont.h  IWzGr2D.h  IWzGr2DLayer.h  IWzList.h  IWzNameSpace.h  IWzNameSpaceProperty.h  IWzNameSpaceWriter.h  IWzPackage.h  IWzPackageWriter.h  IWzPolyShape2D.h  IWzProperty.h  IWzRawCanvas.h  IWzRawCanvasAllocator.h  IWzResMan.h  IWzSeekableArchive.h  IWzSerialize.h  IWzShape2D.h  IWzSound.h  IWzSoundState.h  IWzUOL.h  IWzVector2D.h  (+36 more)
Blackwings Launcher/: Blackwings Launcher.vcxproj  main.cpp
src/Blackwings/: Blackwings.ini  CMakeLists.txt  Config.cpp  Config.h  DllMain.cpp  Game.cpp  Game.h
src/Blackwings/Game/: Addresses.h  StringPool.cpp  StringPool.h
src/Blackwings/Game/Shared/: ZXString.cpp  ZXString.h
src/Blackwings/Modules/: GameMemoryModule.cpp  GameMemoryModule.h  INetMsgHandlerModule.cpp  INetMsgHandlerModule.h  StringPoolModule.cpp  StringPoolModule.h  WinAPIModule.cpp  WinAPIModule.h  WindowModule.cpp  WindowModule.h  WinsockModule.cpp  WinsockModule.h
src/Blackwings/Utils/: Memory.cpp  Memory.h
